--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -37,6 +37,20 @@ items:
       href: active-directory-b2c-tutorials-spa-webapi.md
 - name: Exempel
   href: code-samples.md
+- name: Begrepp
+  items:
+  - name: Programtyper
+    href: active-directory-b2c-apps.md
+  - name: Autentiseringsprotokoll
+    href: active-directory-b2c-reference-protocols.md
+  - name: OAuth 2.0
+    href: active-directory-b2c-reference-oauth-code.md
+  - name: OpenId Connect
+    href: active-directory-b2c-reference-oidc.md
+  - name: Token
+    href: active-directory-b2c-reference-tokens.md
+  - name: Användarkonton
+    href: user-overview.md
 - name: Instruktionsguider
   items:
   - name: Registrera ditt program
@@ -45,8 +59,6 @@ items:
     href: active-directory-b2c-reference-policies.md
   - name: Mobilappar och skrivbordsappar
     items:
-    - name: Översikt
-      href: active-directory-b2c-reference-oauth-code.md
     - name: iOS
       items:
       - name: iOS Swift med MSAL
@@ -67,8 +79,6 @@ items:
       href: configure-ropc.md
   - name: Webbappar
     items:
-    - name: Översikt
-      href: active-directory-b2c-reference-oidc.md
     - name: ASP.NET
       href: active-directory-b2c-devquickstarts-web-dotnet-susi.md
     - name: ASP.NET Core
@@ -238,14 +248,6 @@ items:
     items:
     - name: Kodexempel
       href: https://azure.microsoft.com/resources/samples/?service=active-directory-b2c
-    - name: Ordlista
-      items:
-      - name: Typer av program
-        href: active-directory-b2c-apps.md
-      - name: Autentiseringsprotokoll
-        href: active-directory-b2c-reference-protocols.md
-      - name: Token
-        href: active-directory-b2c-reference-tokens.md
     - name: Regionstillgänglighet och dataplacering
       href: active-directory-b2c-reference-tenant-type.md
     - name: Aktivera fakturering
@@ -276,9 +278,9 @@ items:
     href: active-directory-b2c-support.md
   - name: Videoklipp
     href: https://azure.microsoft.com/documentation/videos/index/?services=active-directory-b2c
-ms.openlocfilehash: 6a0a90627abaf94b004f07ad22fc1156396829ec
-ms.sourcegitcommit: 974c478174f14f8e4361a1af6656e9362a30f515
+ms.openlocfilehash: 9d9e448d37a8780fe24fd6a72f8fdf0d412f2066
+ms.sourcegitcommit: 31241b7ef35c37749b4261644adf1f5a029b2b8e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/20/2018
-ms.locfileid: "41929076"
+ms.lasthandoff: 09/04/2018
+ms.locfileid: "43663908"
