--- a/articles/ansible/index.yml
+++ b/articles/ansible/index.yml
@@ -1,14 +1,14 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 9f537ee8fe646a024fb191901b3669b4b5d60d6b
-ms.sourcegitcommit: f6e2a03076679d53b550a24828141c4fb978dcf9
+ms.openlocfilehash: 11541b0af13de17b20c1be516184d094b1be0961
+ms.sourcegitcommit: 31241b7ef35c37749b4261644adf1f5a029b2b8e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/27/2018
-ms.locfileid: "43086677"
+ms.lasthandoff: 09/04/2018
+ms.locfileid: "43667079"
 documentType: LandingData
-title: Ansible i Azure-dokumentation
+title: Dokumentation om Ansible på Azure
 metadata:
-  title: Ansible i Azure-dokumentation – självstudier, exempel, referenser och resurser
+  title: Dokumentation om Ansible på Azure – självstudier, exempel, referenser och resurser
   description: Lär dig använda Ansible för att automatisera etablering i molnet, konfigurationshantering och programdistribution.
   ms.service: ansible
   keywords: ansible, azure, devops, tutorials, samples, reference
