--- a/articles/ansible/toc.yml
+++ b/articles/ansible/toc.yml
@@ -1,9 +1,9 @@
 items:
-- name: Ansible i Azure
+- name: Dokumentation om Ansible på Azure
   href: ./index.yml
 - name: Översikt
   items:
-  - name: Om Ansible i Azure
+  - name: Om Ansible på Azure
     href: ./ansible-overview.md
 - name: Snabbstarter
   items:
@@ -55,9 +55,9 @@ items:
   items:
   - name: Visual Studio Code-tillägg för Ansible
     href: https://marketplace.visualstudio.com/items?itemName=vscoss.vscode-ansible
-ms.openlocfilehash: 8f803114e966a3b544e4a4788752be8c494ad33a
-ms.sourcegitcommit: 76797c962fa04d8af9a7b9153eaa042cf74b2699
+ms.openlocfilehash: c6f8b3fe0267cd011ee5c6d7919f0942209aa38d
+ms.sourcegitcommit: 31241b7ef35c37749b4261644adf1f5a029b2b8e
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/21/2018
-ms.locfileid: "41928424"
+ms.lasthandoff: 09/04/2018
+ms.locfileid: "43667472"
