--- a/articles/chef/toc.yml
+++ b/articles/chef/toc.yml
@@ -1,48 +1,55 @@
-- name: Chef Software i Azure-dokumentationen
+items:
+- name: Dokumentation om Chef Software på Azure
   href: ./index.yml
 - name: Översikt
   items:
-    - name: Om Chef på Azure
-      href: ./chef-overview.md
-    - name: Om Habitat på Azure
-      href: ./chef-habitat-overview.md
-    - name: Om InSpec på Azure
-      href: ./chef-inspec-overview.md
+  - name: Om Chef på Azure
+    href: ./chef-overview.md
+  - name: Om Habitat på Azure
+    href: ./chef-habitat-overview.md
+  - name: Om InSpec på Azure
+    href: ./chef-inspec-overview.md
 - name: Snabbstarter
-  expanded: true
   items:
-    - name: Chef
-      expanded: true
-      items:
-        - name: Installera Chef med hjälp av Azure Portal
-          href: ./chef-extension-portal.md
+  - name: Chef
+    items:
+    - name: Installera Chef med hjälp av Azure Portal
+      href: ./chef-extension-portal.md
+    expanded: true
+  expanded: true
 - name: Självstudier
   items:
-    - name: Chef
-      items:
-        - name: Skapa en virtuell Windows-dator
-          href: /azure/virtual-machines/windows/chef-automation
+  - name: Chef
+    items:
+    - name: Skapa en virtuell Windows-dator
+      href: /azure/virtual-machines/windows/chef-automation
 - name: Referens
   items:
-    - name: Azure Chef-tillägg
-      href: 'https://docs.chef.io/azure_portal.html#azure-chef-extension'
+  - name: Azure Chef-tillägg
+    href: https://docs.chef.io/azure_portal.html#azure-chef-extension
 - name: Resurser
   items:
-    - name: Chef Automate
-      items:
-        - name: Översikt över Chef Automate
-          href: 'https://docs.chef.io/chef_automate.html'
-        - name: Installationsguide för Chef Automate
-          href: 'https://docs.chef.io/install_chef_automate.html'
-        - name: Chef Automate på Azure Marketplace
-          href: 'https://azuremarketplace.microsoft.com/en-us/marketplace/apps/chef-software.chef-automate'
-    - name: Nyheter om Chef Software
-      items:
-        - name: Blogg om Chef Software
-          href: 'https://blog.chef.io/'
+  - name: Chef Automate
+    items:
+    - name: Översikt över Chef Automate
+      href: https://docs.chef.io/chef_automate.html
+    - name: Installationsguide för Chef Automate
+      href: https://docs.chef.io/install_chef_automate.html
+    - name: Chef Automate på Azure Marketplace
+      href: https://azuremarketplace.microsoft.com/en-us/marketplace/apps/chef-software.chef-automate
+  - name: Nyheter om Chef Software
+    items:
+    - name: Blogg om Chef Software
+      href: https://blog.chef.io/
 - name: Verktyg
   items:
-    - name: Chef Visual Studio Team Services-tillägg
-      href: 'https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-chef-tasks'
-    - name: Habitat Visual Studio Team Services-tillägg
-      href: 'https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-habitat-tasks'
+  - name: Chef Visual Studio Team Services-tillägg
+    href: https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-chef-tasks
+  - name: Habitat Visual Studio Team Services-tillägg
+    href: https://marketplace.visualstudio.com/items?itemName=chef-software.vsts-habitat-tasks
+ms.openlocfilehash: 5fc5b99196bb24d43d0ec21470e374ff7a25182e
+ms.sourcegitcommit: 31241b7ef35c37749b4261644adf1f5a029b2b8e
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/04/2018
+ms.locfileid: "43663491"
