--- a/articles/azure-stack/TOC.yml
+++ b/articles/azure-stack/TOC.yml
@@ -167,7 +167,9 @@ items:
       - name: Säkerhetskopiera Azure Stack
         href: azure-stack-backup-back-up-azure-stack.md
       - name: Säkerhetskopiera filer och program på Azure Stack
-        href: ..\backup\backup-mabs-files-applications-azure-stack.md?toc=%2fazure%2fazure-stack%2ftoc.json
+        href: ../backup/backup-mabs-files-applications-azure-stack.md?toc=/azure/azure-stack/toc.json&bc=/azure/azure-stack/breadcrumb/toc.json
+      - name: Replikera Azure Stack-datorer till Azure
+        href: ../site-recovery/azure-stack-site-recovery.md?toc=/azure/azure-stack/toc.json&bc=/azure/azure-stack/breadcrumb/toc.json
       - name: Återställa från oåterkallelig dataförlust
         href: azure-stack-backup-recover-data.md
       - name: Metodtips för säkerhetskopiering
@@ -368,9 +370,9 @@ items:
     href: http://stackoverflow.com/questions/tagged/azure-stack
   - name: Utbildning och certifiering
     href: https://docs.microsoft.com/azure/azure-stack/azure-stack-train-and-cert
-ms.openlocfilehash: 1bb070bc7414623ab065a0fccb441f22b2fb4827
-ms.sourcegitcommit: ebb460ed4f1331feb56052ea84509c2d5e9bd65c
+ms.openlocfilehash: d56f99f44539f4979a9fdec672278dffd4a16809
+ms.sourcegitcommit: 31241b7ef35c37749b4261644adf1f5a029b2b8e
 ms.translationtype: MT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 08/24/2018
-ms.locfileid: "42916387"
+ms.lasthandoff: 09/04/2018
+ms.locfileid: "43668038"
