--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -81,7 +81,7 @@ items:
     items:
     - name: Beräkna och ange dataflöde
       href: set-throughput.md
-  - name: Partitionering
+  - name: Partitionering och datadistribution
     href: partition-data.md
   - name: Indexering
     href: indexing-policies.md
@@ -111,12 +111,20 @@ items:
       href: vnet-service-endpoint.md
     - name: Key Vault-stöd
       href: access-secrets-from-keyvault.md
+  - name: Säkerhetskopiering och återställning
+    href: online-backup-and-restore.md
+  - name: Hög tillgänglighet
+    href: regional-failover.md
 - name: API:er för flera modeller
   items:
   - name: SQL API-dokument
     items:
     - name: Översikt
       href: sql-api-introduction.md
+    - name: Skriva SQL-frågor
+      href: sql-api-sql-query.md
+    - name: Modelldokumentdata
+      href: modeling-data.md
     - name: Självstudier
       items:
       - name: 1 – Skapa konto
@@ -175,14 +183,10 @@ items:
         href: cli-samples.md
     - name: Instruktionsguider
       items:
-      - name: Massexecutor – .NET-bibliotek
-        href: bulk-executor-dot-net.md
-      - name: Massexecutor – Java-bibliotek
-        href: bulk-executor-java.md
-      - name: Skriva SQL-frågor
-        href: sql-api-sql-query.md
       - name: Justera prestanda för frågor
         href: sql-api-sql-query-metrics.md
+      - name: Lagrade procedurer, utlösare och UDF:er
+        href: programming.md
       - name: Datatyper
         items:
         - name: DateTime
@@ -374,36 +378,30 @@ items:
       href: local-emulator-export-ssl-certificates.md
     - name: Visual Studio Code-tillägg
       href: https://marketplace.visualstudio.com/items?itemName=ms-azuretools.vscode-cosmosdb
-  - name: Justera prestanda
-    items:
-    - name: Prestandatips för .NET SDK
-      href: performance-tips.md
-    - name: Prestandatips för Java SDK
-      href: performance-tips-java.md
-    - name: Prestandatips för Async Java SDK
-      href: performance-tips-async-java.md
-    - name: Prestandatest – exempelapp
-      href: performance-testing.md
+  - name: Konfigurera VSTS CI/CD-pipeline
+    href: tutorial-setup-ci-cd.md
   - name: Bästa praxis
     items:
-    - name: Modelldokumentdata
-      href: modeling-data.md
+    - name: Prestandatips
+      items:
+      - name: Prestandatips för .NET SDK
+        href: performance-tips.md
+      - name: Prestandatips för Java SDK
+        href: performance-tips-java.md
+      - name: Prestandatips för Async Java SDK
+        href: performance-tips-async-java.md
+      - name: Prestandatest – exempelapp
+        href: performance-testing.md
+    - name: Kostnadseffektiva läsningar och skrivningar
+      href: key-value-store-cost.md
     - name: SQL-datapartitionering
       href: sql-api-partition-data.md
     - name: Partitionering av diagramdata
       href: graph-partitioning.md
-  - name: Stordata och analyser
-    items:
-    - name: Lambda-arkitektur
-      href: lambda-architecture.md
-    - name: Spark-anslutningsapp
-      href: spark-connector.md
-    - name: Spark, Kafka och Azure Cosmos DB
-      href: https://docs.microsoft.com/azure/hdinsight/apache-kafka-spark-structured-streaming-cosmosdb?toc=/azure/cosmos-db/toc.json
-    - name: Näthandelslösning för ändringsflöde
-      href: changefeed-ecommerce-solution.md
   - name: Integrera med andra Azure-tjänster
     items:
+    - name: Näthandelslösning för ändringsflöde
+      href: changefeed-ecommerce-solution.md
     - name: Azure App Service
       href: create-website.md
     - name: Azure Search-indexerare
@@ -424,22 +422,24 @@ items:
       href: https://github.com/hdinsight/hdinsight-storm-examples/blob/master/IotExample/README.md
     - name: Använd Spring Boot Starter
       href: https://docs.microsoft.com/java/azure/spring-framework/configure-spring-boot-starter-java-app-with-cosmos-db?toc=/azure/cosmos-db/toc.json
-  - name: Visualisera data
-    items:
-    - name: Visualisera med Power BI-anslutningsapp
+    - name: Lambda-arkitektur
+      href: lambda-architecture.md
+    - name: Azure Databricks (Spark-anslutningsapp)
+      href: spark-connector.md
+    - name: Spark och Kafka
+      href: https://docs.microsoft.com/azure/hdinsight/apache-kafka-spark-structured-streaming-cosmosdb?toc=/azure/cosmos-db/toc.json
+    - name: Power BI-anslutningsapp
       href: powerbi-visualize.md
-    - name: Visualisera med ODBC-drivrutin
+    - name: ODBC-drivrutin
       href: odbc-driver.md
-  - name: Säkerhetskopiering och återställning
-    href: online-backup-and-restore.md
-  - name: Hög tillgänglighet
-    href: regional-failover.md
-  - name: Lagrade procedurer, utlösare och UDF:er
-    href: programming.md
-  - name: Om bibliotek för massexecutor
-    href: bulk-executor-overview.md
-  - name: Kostnadseffektiva läsningar och skrivningar
-    href: key-value-store-cost.md
+  - name: Massexecutor-bibliotek
+    items:
+    - name: Om bibliotek för massexecutor
+      href: bulk-executor-overview.md
+    - name: Massexecutor – .NET-bibliotek
+      href: bulk-executor-dot-net.md
+    - name: Massexecutor – Java-bibliotek
+      href: bulk-executor-java.md
 - name: Resurser
   items:
   - name: Översiktsblad för frågor
@@ -463,9 +463,9 @@ items:
     href: http://research.microsoft.com/apps/pubs/default.aspx?id=206913
   - name: Appar för sociala medier
     href: social-media-apps.md
-ms.openlocfilehash: 8837d9bc6cf492a146d96d917d9157e51bffa0f5
-ms.sourcegitcommit: cb61439cf0ae2a3f4b07a98da4df258bfb479845
+ms.openlocfilehash: afa2ccd0998ba78aa0f9e75bb87691ead8b96697
+ms.sourcegitcommit: e2348a7a40dc352677ae0d7e4096540b47704374
 ms.translationtype: HT
 ms.contentlocale: sv-SE
 ms.lasthandoff: 09/05/2018
-ms.locfileid: "43695990"
+ms.locfileid: "43783264"
