--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -1,41 +1,50 @@
+items:
 - name: Dokumentation om Azure Cognitive Services
   href: index.yml
 - name: Översikt
-  expanded: true
   items:
-    - name: Vad är Cognitive Services?
-      href: Welcome.md
+  - name: Vad är Cognitive Services?
+    href: Welcome.md
+  - name: Stöd för språk
+    href: language-support.md
+  expanded: true
 - name: Snabbstarter
   items:
-    - name: Skapa ett konto
-      href: cognitive-services-apis-create-account.md
-    - name: Skapa en bildklassificerare
-      href: ./custom-vision-service/getting-started-build-a-classifier.md
-    - name: Skapa en app för hemautomatisering
-      href: ./luis/luis-get-started-create-app.md
-    - name: Skapa en app för textanalys i .NET
-      href: ./text-analytics/quickstarts/csharp.md
+  - name: Skapa ett konto
+    href: cognitive-services-apis-create-account.md
+  - name: Skapa en bildklassificerare
+    href: ./custom-vision-service/getting-started-build-a-classifier.md
+  - name: Skapa en app för hemautomatisering
+    href: ./luis/luis-get-started-create-app.md
+  - name: Skapa en app för textanalys i .NET
+    href: ./text-analytics/quickstarts/csharp.md
 - name: Självstudier
   items:
-    - name: Webbsida för anpassad sökning
-      href: ./bing-custom-search/tutorials/custom-search-web-page.md
-    - name: LUIS-app
-      href: ./luis/luis-nodejs-tutorial-build-bot-framework-sample.md
-    - name: Förbättra avsiktlig noggrannhet för kommandon
-      href: ./luis/luis-tutorial-batch-testing.md
+  - name: Webbsida för anpassad sökning
+    href: ./bing-custom-search/tutorials/custom-search-web-page.md
+  - name: LUIS-app
+    href: ./luis/luis-nodejs-tutorial-build-bot-framework-sample.md
+  - name: Förbättra avsiktlig noggrannhet för kommandon
+    href: ./luis/luis-tutorial-batch-testing.md
 - name: Resurser
   items:
-    - name: Azure-översikt
-      href: 'https://azure.microsoft.com/roadmap/?category=cognitive-services'
-    - name: Prissättning
-      href: 'https://azure.microsoft.com/pricing/details/cognitive-services/'
-    - name: Priskalkylator
-      href: 'https://azure.microsoft.com/pricing/calculator/'
-    - name: Videoklipp
-      href: 'https://azure.microsoft.com/resources/videos/index/?services=cognitive-services'
-    - name: Tjänstuppdateringar
-      href: 'https://azure.microsoft.com/updates/?product=cognitive-services'
-    - name: Uppförandekod
-      href: 'http://go.microsoft.com/fwlink/?LinkId=698895'
-    - name: Kunskapsbas
-      href: 'https://cognitive.uservoice.com/knowledgebase'
+  - name: Azure-översikt
+    href: https://azure.microsoft.com/roadmap/?category=cognitive-services
+  - name: Prissättning
+    href: https://azure.microsoft.com/pricing/details/cognitive-services/
+  - name: Priskalkylator
+    href: https://azure.microsoft.com/pricing/calculator/
+  - name: Videoklipp
+    href: https://azure.microsoft.com/resources/videos/index/?services=cognitive-services
+  - name: Tjänstuppdateringar
+    href: https://azure.microsoft.com/updates/?product=cognitive-services
+  - name: Uppförandekod
+    href: http://go.microsoft.com/fwlink/?LinkId=698895
+  - name: Kunskapsbas
+    href: https://cognitive.uservoice.com/knowledgebase
+ms.openlocfilehash: 8bd7984fd713a2acbb1ca2cc66e3d64bd49ef5a4
+ms.sourcegitcommit: d211f1d24c669b459a3910761b5cacb4b4f46ac9
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/06/2018
+ms.locfileid: "44023833"
