--- a/articles/site-recovery/index.yml
+++ b/articles/site-recovery/index.yml
@@ -1,4 +1,10 @@
 ### YamlMime:YamlDocument
+ms.openlocfilehash: e7a5c7f08b34c91512ad2bf5d9f3fcb82feb9e08
+ms.sourcegitcommit: d211f1d24c669b459a3910761b5cacb4b4f46ac9
+ms.translationtype: HT
+ms.contentlocale: sv-SE
+ms.lasthandoff: 09/06/2018
+ms.locfileid: "44026104"
 documentType: LandingData
 title: Dokumentation om Site Recovery
 metadata:
@@ -13,12 +19,6 @@ metadata:
   ms.topic: landing-page
   ms.date: 09/23/2017
   ms.author: carolz
-  ms.openlocfilehash: 0d66952b5f159ce92b8586f7beb71c25fe7c7b39
-  ms.sourcegitcommit: 6fb44d6fbce161b26328f863479ef09c5303090f
-  ms.translationtype: HT
-  ms.contentlocale: sv-SE
-  ms.lasthandoff: 01/10/2018
-  ms.locfileid: "27740093"
 abstract:
   description: Azure Site Recovery dirigerar och hanterar haveriberedskap för virtuella Azure-datorer, lokala virtuella datorer och fysiska servrar. Lär dig att replikera, redundansväxla och återställa med våra snabbstarter och självstudier.
 sections:
@@ -54,7 +54,7 @@ sections:
     - html: <a href="tutorial-prepare-on-premises-vmware">Förbereda lokal VMware</a>
     - html: <a href="tutorial-vmware-to-azure">Konfigurera haveriberedskap</a>
     - html: <a href="tutorial-dr-drill-azure">Köra ett återställningstest</a>
-    - html: <a href="tutorial-vmware-to-azure-failover-failback">Köra redundans och återställning efter fel</a>
+    - html: <a href="vmware-azure-tutorial-failover-failback">Köra redundans och återställning efter fel</a>
   - type: text
     html: <h3>Hyper-V</h3>
   - type: list
@@ -80,6 +80,6 @@ sections:
     className: cardsD
     items:
     - title: Kommandorad
-      html: <p><a href="/powershell/module/azurerm.siterecovery/?view=azurermps-4.3.1">Azure PowerShell</a></p>
+      html: <p><a href="/powershell/module/azurerm.siterecovery>Azure PowerShell</a></p>
     - title: REST
       html: <p><a href="/rest/api/site-recovery/">REST API-referens</a></p>
